[tool.poetry]
name = "gps-tracks-rest-api"
version = "0.1.0"
description = ""
authors = ["Toxe <toxe@toxe.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-jwt-extended = "^3.24.1"
flask-migrate = "^2.5.3"
flask-shell-ipython = "^0.4.1"
flask-sqlalchemy = "^2.4.4"
sqlalchemy = "^1.3.19"
marshmallow = "^3.7.1"
ipython = "^7.17.0"
matplotlib = "^3.3.1"
numpy = "^1.19.1"
python-dotenv = "^0.14.0"
gpxpy = "^1.4.2"
requests = "^2.24.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pylint = "^2.6.0"
pylint-flask = "^0.6"
pylint-flask-sqlalchemy = "^0.2.0"
black = "^20.8b1"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages]
disable = ["missing-module-docstring", "missing-function-docstring", "missing-class-docstring"]
