[tool.poetry]
name = "gps-tracks-rest-api"
version = "0.1.0"
description = ""
authors = ["Toxe <toxe@toxe.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-migrate = "^2.5.3"
flask-shell-ipython = "^0.4.1"
flask-sqlalchemy = "^2.4.4"
marshmallow = "3.9.1"
ipython = "8.10.0"
matplotlib = "3.3.3"
numpy = "1.19.3"
python-dotenv = "0.15.0"
gpxpy = "^1.4.2"
requests = "2.25.0"
gunicorn = "^20.0.4"
Flask-JWT-Extended = "3.25.0"
SQLAlchemy = "1.3.20"

[tool.poetry.dev-dependencies]
pytest = "6.2.0"
pylint = "^2.6.0"
pylint-flask = "^0.6"
pylint-flask-sqlalchemy = "^0.2.0"
black = "^20.8b1"
rope = "0.18.0"
pylint-pytest = "^0.3.0"
pytest-xdist = "^2.2.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages]
disable = ["missing-module-docstring", "missing-function-docstring", "missing-class-docstring", "invalid-name"]
